<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_fragment"
        android:icon="@drawable/ic_main"
        android:title="@string/main_fragment" />

    <item
        android:id="@+id/catalog_fragment"
        android:icon="@drawable/ic_catalog"
        android:title="@string/catalog_fragment" />

    <item
        android:id="@+id/basket_fragment"
        android:icon="@drawable/ic_basket"
        android:title="@string/basket_fragment" />

    <item
        android:id="@+id/discount_fragment"
        android:icon="@drawable/ic_discount"
        android:title="@string/discount_fragment" />

    <item
        android:id="@+id/account_fragment"
        android:icon="@drawable/ic_account"
        android:title="@string/account_fragment" />
</menu>